<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            

    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
    

    <TextView
        android:id="@+id/txvNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginBottom="1dip"
        android:layout_marginTop="5dip"
        android:text="@string/tituloCadastroPessoa"
        style="@style/TextoSubTitulo"/>

    <ImageView
	        android:id="@+id/imagemPessoa"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_gravity="center"
	        android:layout_height="100dip"
	        android:src="@drawable/person" 
	        android:layout_marginTop="10dip"
	        android:contentDescription="@string/foto_pessoa"
	        android:onClick="cadastrarFoto"/>
    
    <TextView
        android:id="@+id/txvLblNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/nome_pessoa"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
    
    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/txvLblTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/telefone_pessoa"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
    
    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/txvLblEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/endereco_pessoa"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
    
    <EditText
        android:id="@+id/edtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/txvLblNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/numero_pessoa"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
    
    <EditText
        android:id="@+id/edtNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/txvLblCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/cidade_pessoa"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
    
    <EditText
        android:id="@+id/edtCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/txvLblBairro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/bairro_pessoa"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
    
    <EditText
        android:id="@+id/edtBairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/txvLblCep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/cep_pessoa"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
    
    <EditText
        android:id="@+id/edtCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <Button
         android:id="@+id/btnCadastrarPessoa"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
         android:text="@string/cadastrar"
         android:onClick="cadastrarPessoa"/>
    
</LinearLayout>

</ScrollView>