<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
	        android:id="@+id/txvNome"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:gravity="center"
	        android:text="@string/nome_pessoa"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        style="@style/TextoSubTitulo"
	        android:layout_marginBottom="10dip"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
	        <RelativeLayout
	        android:id="@+id/relative"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <ImageView
				        android:id="@+id/imagemPessoa"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:src="@drawable/person" 
				        android:contentDescription="@string/foto_pessoa"
				        android:onClick="cadastrarFoto"
				        android:paddingLeft="10dip"
				        android:paddingRight="10dip"/>
	
	        <TextView
	            android:id="@+id/textLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/imagemPessoa"
	            android:layout_centerInParent="true"
	            android:singleLine="true"
	            android:text="@string/editar_foto"
	            android:textSize="12sp"
				android:onClick="cadastrarFoto"
				android:clickable="true"/>
	    	</RelativeLayout>
	    	
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        >
		        
		        <TextView
			        android:id="@+id/txvLblTelefone"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/telefone_pessoa"
			        android:textAppearance="?android:attr/textAppearanceSmall" 
			        style="@style/LabelDetalhe"/>
		        
		        <TextView
			        android:id="@+id/txvTelefone"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/telefone_pessoa"
			        android:textAppearance="?android:attr/textAppearanceMedium" 
			        style="@style/TextoDetalhe"/>
		        
		        <TextView
			        android:id="@+id/txvLblEndereco"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/endereco_pessoa"
			        android:textAppearance="?android:attr/textAppearanceSmall"
			        style="@style/LabelDetalhe"/>
		        
		        <TextView
			        android:id="@+id/txvEndereco"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/endereco_pessoa"
			        android:textAppearance="?android:attr/textAppearanceMedium" 
			        style="@style/TextoDetalhe"/>
	
		        </LinearLayout>	        
    </LinearLayout>
    
</LinearLayout>